--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,14 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
