--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
+    "peer": "^0.6.1",
     "shortid": "^2.2.16",
     "socket.io": "^4.4.0",
     "socketio": "^1.0.0"
