--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
